// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render any expenses with an empty argument 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expense
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList component correctly 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={475}
      createdAt={0}
      description="Coffee"
      id={1}
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={130000}
      createdAt={-432000000}
      description="Rent"
      id={2}
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={50000}
      createdAt={432000000}
      description="Credit card"
      id={3}
      key="3"
      note=""
    />
  </div>
</div>
`;
